# Posture_Guardian

./: .gitignore  AGENTS.md  LICENSE  README.md  compose.coolify.yaml
.github/: pull_request_template.md
app/: .dockerignore  .env.example  Dockerfile  README.md  app.json  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/app/: _layout.tsx  auth.tsx  session.tsx
app/components/: ai-orb.tsx  auth-form.d.ts  auth-form.native.tsx  auth-form.web.tsx  auth-guard.tsx  brand-mark.tsx  improvement-trend.tsx  page-shell.tsx  posture-illustration.tsx  posture-overlay.tsx  score-gauge.tsx  session-history-card.tsx  status-pill.tsx  weekly-report-card.tsx
app/constants/: design.ts  theme.ts
app/context/: app-context.tsx
app/hooks/: use-app-theme.ts
app/lib/: api.ts  auth-storage.d.ts  auth-storage.native.ts  auth-storage.web.ts  demo.ts  format.ts  posture-window.ts  trends.ts
app/public/: index.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
docs/: competition.md  data-and-storage.md  deployment.md  integrations.md  posture-evaluation.md  project-overview.md  project-profile.md  security-and-privacy.md  student-frontend-guide.md
outputs/: Posture_Guardian_概念驗證.pptx  Posture_Guardian_概念驗證_現行架構版.pptx
services/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/api/scripts/: download_pose_model.py
services/api/src/posture_guardian_api/: database.py  insights.py  models.py  router.py  schemas.py  sessions.py
services/api/tests/: test_app.py  test_sessions.py
(+61 files in other folders)
