[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "posture-guardian-api"
version = "0.1.0"
description = "Posture Guardian 的姿勢分析、工作階段與個人化建議 API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.22,<1",
  "asyncpg>=0.31,<1",
  "fastapi[standard]>=0.115,<1",
  "mediapipe>=0.10.18,<0.11",
  "numpy>=1.26,<3",
  "openai>=2.45,<3",
  "pillow>=12,<13",
  "pydantic-settings>=2.14,<3",
  "sqlalchemy[asyncio]>=2.0.51,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest-asyncio>=1.3,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.fastapi]
entrypoint = "posture_guardian_api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/posture_guardian_api"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mediapipe", "mediapipe.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
